2011-01-12  Roland McGrath  <roland@redhat.com>

	* run-prelink-addr-test.sh: Make symlinks to find .debug files
	corresponding to .noshdrs files.

2011-01-11  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: Add testfile54, 32 and 64-bit.
	* testfile54-32.so.bz2, testfile54-32.so.debug.bz2,
	testfile54-32.prelink.so.bz2, testfile54-32.noshdrs.so.bz2,
	testfile54-64.so.bz2, testfile54-64.so.debug.bz2,
	testfile54-64.prelink.so.bz2, testfile54-64.noshdrs.so.bz2: New.
	* Makefile.am (EXTRA_DIST): Add and update all.

	* run-prelink-addr-test.sh: Run 32 and 64-bit testfile53 tests.
	* testfile53.bz2, testfile53.debug.bz2,
	testfile53.prelink.bz2: Deleted, so...
	* testfile53-64.bz2, testfile53-64.debug.bz2,
	testfile53-64.prelink.bz2: Recreated with 64-bit names.
	* testfile53-32.bz2, testfile53-32.debug.bz2,
	testfile53-32.prelink.bz2: New in 32-bit.
	* Makefile.am (EXTRA_DIST): Add and update all.

	* run-prelink-addr-test.sh: Run 32 and 64-bit testfile52 tests.
	* testfile52.so.bz2, testfile52.so.debug.bz2,
	testfile52.prelink.so.bz2: Deleted, so...
	* testfile52-32.so.bz2, testfile52-32.so.debug.bz2,
	testfile52-32.prelink.so.bz2: Recreated with 32-bit names.
	* testfile52-32.noshdrs.so.bz2: New data file, stripped of headers.
	* testfile52-64.so.bz2, testfile52-64.so.debug.bz2,
	testfile52-64.prelink.so.bz2, testfile52-64.noshdrs.so.bz2: New files.
	* Makefile.am (EXTRA_DIST): Add and update all.

2011-01-10  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: New test for prelinked addrs.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.
	* testfile52.so.bz2, testfile52.so.debug.bz2: New data files.
	* testfile52.prelink.so.bz2: New data file, shows REL->RELA.
	* testfile53.bz2, testfile53.debug.bz2: New data files.
	* testfile53.prelink.bz2: New data file, shows ET_EXEC remap.
	* Makefile.am (EXTRA_DIST): Add them.

2010-06-04  Roland McGrath  <roland@redhat.com>

	* run-unstrip-test.sh: Also test modifying the file in place.
