@@ -151,7 +151,10 @@ EXTRA_DIST = run-arextract.sh run-arsymtest.sh \
 	     testfile54-32.so.bz2 testfile54-32.so.debug.bz2 \
 	     testfile54-32.prelink.so.bz2 testfile54-32.noshdrs.so.bz2 \
 	     testfile54-64.so.bz2 testfile54-64.so.debug.bz2 \
-	     testfile54-64.prelink.so.bz2 testfile54-64.noshdrs.so.bz2
+	     testfile54-64.prelink.so.bz2 testfile54-64.noshdrs.so.bz2 \
+	     testfile55-32.bz2 testfile55-32.debug.bz2 \
+	     testfile55-32.prelink.bz2 testfile55-64.bz2 \
+	     testfile55-64.debug.bz2 testfile55-64.prelink.bz2
 
 installed_TESTS_ENVIRONMENT = libdir=$(DESTDIR)$(libdir) \
 			      bindir=$(DESTDIR)$(bindir) \
